# ccore

./: .gitignore  .gitmodules
adt/: except.c  except.h  new.h  object.h  set.c  set.h  stack.c  stack.h  test.c
doubles/: double.c
echo/: echo.c  echo_v7.c
getline/: getline.c
jpt/: Makefile  config.status  configure  configure.ac
jpt/src/: Makefile  main.c
ls/p1/: .anjuta_sym_db.db  configure.ac
ls/p1/.anjuta/session/: anjuta.session  dock-layout.xml
ls/p1/src/: Makefile.am  main.c  opts.c
who/: who01.c
